--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,9 +47,7 @@ test_script:
       cargo build --target %TARGET% &&
       cargo build --target %TARGET% --release &&
       cargo test --target %TARGET% &&
-      cargo test --target %TARGET% --release &&
-      cargo run --target %TARGET% &&
-      cargo run --target %TARGET% --release
+      cargo test --target %TARGET% --release
     )
 
 before_deploy:
@@ -64,7 +62,7 @@ deploy:
   # - Encrypt it. Go to https://ci.appveyor.com/tools/encrypt
   # - Paste the output down here
   auth_token:
-    secure: t3puM/2hOig26EHhAodcZBc61NywF7/PFEpimR6SwGaCiqS07KR5i7iAhSABmBp7
+    secure: C7eEPPm7k1XtqvAy1y6hJNWbYyub/OIIBA9+f5wz2VNFKRMDfgUJJvk0l0Zzq8kW
   description: ''
   on:
     # TODO Here you can pick which targets will generate binary releases
